[package]
name = "toyvmm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = ">=0.2.80"
kvm-bindings = { version = ">=0.5.0", features = ["fam-wrappers"] }
kvm-ioctls = ">=0.11.0"
vmm-sys-util = ">=0.9.0"
vm-memory = { version = ">= 0.7.0", features = ["backend-mmap", "backend-bitmap"] }
