[package]
name = "toyvmm"
version = "0.1.0"
edition = "2021"
authors = ["aztecher <mikiyaf.business@gmail.com>"]
description = "ToyVMM is a project being developed for the purpose of learning virtualization technology"
license = "MIT"

[[bin]]
name = "toyvmm"
bench = false

[dependencies]
clap = { version = "4.3.23", features = ["derive", "string"] }
thiserror = "1.0.47"

vmm = { path = "../vmm" }
utils = { path = "../utils" }
